// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`graded-group should snapshot: initial render (mobile: false) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container "
                        >
                          <table
                            class="categorizer-table mobileTable_1ktoh91"
                          >
                            <caption
                              class="srOnly_b9drwz"
                            >
                              Categorization — select one category for each item
                            </caption>
                            <thead>
                              <tr>
                                <th
                                  class="emptyHeaderCell_1lkwndf"
                                  scope="col"
                                />
                                <th
                                  class="header_whrfk4"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_0-cat-0"
                                    name="perseus_radio_10_0"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_0-cat-0"
                                  >
                                    Some bacteria conduct photosynthesis and produce oxygen, much like plants. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_0-cat-1"
                                    name="perseus_radio_10_0"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_0-cat-1"
                                  >
                                    Some bacteria conduct photosynthesis and produce oxygen, much like plants. — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_1-cat-0"
                                    name="perseus_radio_10_1"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_1-cat-0"
                                  >
                                    Bacteria are always autotrophic but they may get energy from either light or chemical sources. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_1-cat-1"
                                    name="perseus_radio_10_1"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_1-cat-1"
                                  >
                                    Bacteria are always autotrophic but they may get energy from either light or chemical sources. — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_2-cat-0"
                                    name="perseus_radio_10_2"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_2-cat-0"
                                  >
                                    Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents). — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_2-cat-1"
                                    name="perseus_radio_10_2"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_2-cat-1"
                                  >
                                    Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents). — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_3-cat-0"
                                    name="perseus_radio_10_3"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_3-cat-0"
                                  >
                                    Some bacteria live symbiotically inside of host organisms and provide the host with nutrients. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_10_3-cat-1"
                                    name="perseus_radio_10_3"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_10_3-cat-1"
                                  >
                                    Some bacteria live symbiotically inside of host organisms and provide the host with nutrients. — False
                                  </label>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <div
              aria-live="polite"
              role="status"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                <div
                  class="paragraph perseus-paragraph-centered"
                  data-perseus-paragraph-index="0"
                >
                  

                </div>
              </div>
            </div>
            <button
              aria-disabled="false"
              class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_u9mtba"
              data-kind="secondary"
              type="button"
            >
              <span
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
              >
                Check
              </span>
            </button>
            <button
              class="showHintLink_1n4y2tp"
              tabindex="0"
            >
              Explain
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`graded-group should snapshot: initial render (mobile: true) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="gradedGroup_14sgdtb perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container fullBleedContainer_1pirxou"
                        >
                          <table
                            class="categorizer-table mobileTable_1ktoh91"
                          >
                            <caption
                              class="srOnly_b9drwz"
                            >
                              Categorization — select one category for each item
                            </caption>
                            <thead>
                              <tr>
                                <th
                                  class="emptyHeaderCell_1lkwndf"
                                  scope="col"
                                />
                                <th
                                  class="header_whrfk4"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_0-cat-0"
                                    name="perseus_radio_9_0"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_0-cat-0"
                                  >
                                    Some bacteria conduct photosynthesis and produce oxygen, much like plants. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_0-cat-1"
                                    name="perseus_radio_9_0"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_0-cat-1"
                                  >
                                    Some bacteria conduct photosynthesis and produce oxygen, much like plants. — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_1-cat-0"
                                    name="perseus_radio_9_1"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_1-cat-0"
                                  >
                                    Bacteria are always autotrophic but they may get energy from either light or chemical sources. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_1-cat-1"
                                    name="perseus_radio_9_1"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_1-cat-1"
                                  >
                                    Bacteria are always autotrophic but they may get energy from either light or chemical sources. — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_2-cat-0"
                                    name="perseus_radio_9_2"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_2-cat-0"
                                  >
                                    Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents). — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_2-cat-1"
                                    name="perseus_radio_9_2"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_2-cat-1"
                                  >
                                    Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents). — False
                                  </label>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_3-cat-0"
                                    name="perseus_radio_9_3"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_3-cat-0"
                                  >
                                    Some bacteria live symbiotically inside of host organisms and provide the host with nutrients. — True
                                  </label>
                                </td>
                                <td
                                  class="category cell_1w7cte9"
                                >
                                  <input
                                    class="radioInput_i52fet"
                                    id="perseus_radio_9_3-cat-1"
                                    name="perseus_radio_9_3"
                                    type="radio"
                                  />
                                  <label
                                    class="srOnly_b9drwz"
                                    for="perseus_radio_9_3-cat-1"
                                  >
                                    Some bacteria live symbiotically inside of host organisms and provide the host with nutrients. — False
                                  </label>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <button
              class="showHintLink_1n4y2tp"
              tabindex="0"
            >
              Explain
            </button>
            <div
              style="display: flex; align-items: center; height: 68px; margin: 16px -16px -16px -16px; padding-left: 16px; padding-right: 10px; justify-content: space-between;"
            >
              <span />
              <button
                aria-disabled="true"
                class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_1vcomhn-o_O-disabled_okj0ts"
                data-kind="primary"
                type="button"
              >
                <span
                  class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
                >
                  Check
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
